fix to sidebar form inputs, adding wrap to buttons

--- a/files/themes/rac-theme/sass/_forms.scss
+++ b/files/themes/rac-theme/sass/_forms.scss
@@ -8,7 +8,7 @@
 
 %input {
   @extend %arialrounded;
-  min-width: 20rem;
+  min-width: 13rem;
   max-width: 100%;
   border-top: none;
   border-right: none;
